--- a/jboss-standalone/roles/java-app/tasks/main.yml
+++ b/jboss-standalone/roles/java-app/tasks/main.yml
@@ -1,12 +1,20 @@
 ---
 - name: Copy application WAR file to host
   copy: src=jboss-helloworld.war dest=/tmp
+  tags:
+    - helloworld
 
 - name: Deploy HelloWorld to JBoss
   jboss: deploy_path=/usr/share/jboss-as/standalone/deployments/ src=/tmp/jboss-helloworld.war deployment=helloworld.war state=present
-  
+  tags:
+    - helloworld
+    
 - name: Copy application WAR file to host
   copy: src=ticket-monster.war dest=/tmp
+  tags:
+    - ticket-monster
 
 - name: Deploy Ticket Monster to JBoss
   jboss: deploy_path=/usr/share/jboss-as/standalone/deployments/ src=/tmp/ticket-monster.war deployment=ticket-monster.war state=present
+  tags:
+    - ticket-monster
